<resources>
    <string name="app_name">JITPrint</string>

    <string name="navigation_drawer_open">打开导航抽屉</string>
    <string name="navigation_drawer_close">关闭导航抽屉</string>


    <!-- Strings related to login -->
    <string name="prompt_phone">请输入手机号</string>
    <string name="prompt_username">请输入用户名</string>
    <string name="prompt_password">请输入密码</string>
    <string name="action_sign_in">登 录</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_username">无效的用户名</string>
    <string name="error_invalid_password">密码太短</string>
    <string name="error_incorrect_password">密码不正确</string>
    <string name="error_field_required">用户名为必填项</string>
    <string name="user_info_name">周四发生萨芬</string>
    <string name="main_pictrue">图片</string>
    <string name="login_string_find_password">找回密码</string>
    <string name="login_register_userinfo">注册账号</string>
    <string name="login_more">更 多</string>


    <!--  search printer -->
    <string name="PrinterSearching">正在搜索...</string>
    <string name="ButtonSearchText">重新搜索</string>
    <string name="SearchFinishMessage">搜索完成</string>
    <string name="MsgPrinterAdding">添加打印机...</string>
    <string name="BTTextAddNewPrinter">添加</string>
    <string name="DialogTitleBTState">提示</string>
    <string name="DialogMsgButtonOK">是</string>
    <string name="DialogMsgButtonNO">否</string>
    <string name="MainClose">返回</string>
    <string name="print_string_pictrue">打 印</string>

    <!--Menu set-->
    <string name="nav_main_menu_downdata">资源下载</string>
    <string name="nav_main_menu_printset">打印机设置</string>
    <string name="nav_main_menu_check_updata">检查更新</string>
    <string name="nav_main_menu_about">关于</string>
    <string name="nav_main_menu_exit">退出程序</string>
</resources>
