<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_camera"
        android:icon="@drawable/ic_menu_camera"
        android:title="Import"/>
    <item
        android:id="@+id/nav_downdata"
        android:icon="@drawable/ic_menu_slideshow"
        android:title="@string/nav_main_menu_downdata"/>
    <item
        android:id="@+id/nav_print_set"
        android:icon="@drawable/ic_menu_manage"
        android:title="@string/nav_main_menu_printset"/>

    <item
        android:id="@+id/nav_update"
        android:icon="@drawable/ic_menu_update"
        android:title="@string/nav_main_menu_check_updata"/>
    <item
        android:id="@+id/nav_about"
        android:icon="@drawable/ic_menu_about"
        android:title="@string/nav_main_menu_about"/>
    <item
        android:id="@+id/nav_exit"
        android:icon="@drawable/ic_menu_exit"
        android:title="@string/nav_main_menu_exit"/>


</menu>
