<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center_horizontal"
              android:orientation="vertical"
              tools:context="com.dicot.jitprint.activity.login.LoginActivity">

    <include layout="@layout/activity_toolbar_header"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/font_size_20dp"
        android:layout_marginRight="@dimen/font_size_20dp"
        android:layout_marginTop="@dimen/font_size_100dp"
        android:orientation="vertical">


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/login_user_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/prompt_username"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/login_user_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/prompt_password"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"/>

        </android.support.design.widget.TextInputLayout>

        <com.dd.CircularProgressButton
            android:id="@+id/sign_in_button_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/btn_press_selector"
            android:padding="@dimen/font_size_0dp"
            android:textSize="@dimen/font_size_20dp"
            app:cpb_cornerRadius="48dp"
            app:cpb_textComplete="成 功"
            app:cpb_textError="失 败"
            app:cpb_textIdle="登 陆"/>/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/sign_in_button_findpassword"
            android:layout_width="@dimen/font_size_80dp"
            android:layout_height="@dimen/font_size_50dp"
            android:background="@null"
            android:gravity="center"
            android:padding="@dimen/font_size_0dp"
            android:text="@string/login_string_find_password"
            android:textSize="@dimen/font_size_16dp"/>

        <View
            android:layout_width="@dimen/font_size_0.5dp"
            android:layout_height="@dimen/font_size_30dp"
            android:background="@color/gray"/>
        <Button
            android:id="@+id/sign_in_button_register"
            android:layout_width="@dimen/font_size_80dp"
            android:layout_height="@dimen/font_size_50dp"
            android:background="@null"
            android:gravity="center"
            android:padding="@dimen/font_size_0dp"
            android:text="@string/login_register_userinfo"
            android:textSize="@dimen/font_size_16dp"/>

        <View
            android:layout_width="@dimen/font_size_0.5dp"
            android:layout_height="@dimen/font_size_30dp"
            android:background="@color/gray"/>

        <Button
            android:id="@+id/sign_in_button_phone"
            android:layout_width="@dimen/font_size_80dp"
            android:layout_height="@dimen/font_size_50dp"
            android:background="@null"
            android:gravity="center"
            android:padding="@dimen/font_size_0dp"
            android:text="@string/login_more"
            android:textSize="@dimen/font_size_16dp"/>
    </LinearLayout>
</LinearLayout>
